# firefall-server-emulator

./: .gitignore  CLAUDE.md  PROMPT.md  docker-compose.yml  firefall.ini
.claude/agents/: api-server-architect.md  asset-format-researcher.md  binary-reverse-engineer.md  client-patcher.md  community-research.md  lua-protocol-analyst.md  matrix-server-engineer.md  network-traffic-analyst.md
docs/protocols/: binary_analysis_login_matrix.md
docs/re/: client_patching.md
server/: .env  Cargo.toml  Dockerfile
server/config/: default.toml
server/frontend/: index.html  support.html
server/migrations/: 001_initial.sql  002_add_frame_sdb_id.sql
server/src/: main.rs
server/src/api/: handlers.rs  models.rs  routes.rs
server/src/db/: mod.rs
server/src/matrix/: gss.rs  messages.rs  mod.rs  packet.rs  server.rs  session.rs
