[package]
name = "firefall-server"
version = "0.1.0"
edition = "2021"
description = "Firefall server emulator - clientapi_host REST API and Matrix game server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "query", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTPS / TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp"] }

# Auth
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
rand = "0.8"
anyhow = "1"
thiserror = "1"
bytes = "1"
